--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "slack-4-linux",
+  "name": "slack-for-linux",
   "version": "0.0.0",
   "description": "",
   "keywords": [],
   
-    "homepage": "https://github.com/wlaurance/slack-4-linux",
-    "bugs": "https://github.com/wlaurance/slack-4-linux/issues",
+    "homepage": "https://github.com/wlaurance/slack-for-linux",
+    "bugs": "https://github.com/wlaurance/slack-for-linux/issues",
     "author": {
       "name": "Will Laurance",
       "email": "",
@@ -13,7 +13,7 @@
     },
     "repository": {
       "type": "git",
-      "url": "git://github.com/wlaurance/slack-4-linux"
+      "url": "git://github.com/wlaurance/slack-for-linux"
     },
   
   "dependencies": {},
