--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.1",
   "single-instance": true,
   "window": {
-    "title": "slack4Linux",
+    "title": "Slack for Linux",
+    "icon": "./images/app-256.png",
     "width": 650,
     "height": 650,
     "min_width": 650,
