--- a/package.json
+++ b/package.json
@@ -3,33 +3,26 @@
   "version": "0.0.0",
   "description": "",
   "keywords": [],
-  
-    "homepage": "https://github.com/wlaurance/slack-for-linux",
-    "bugs": "https://github.com/wlaurance/slack-for-linux/issues",
-    "author": {
-      "name": "Will Laurance",
-      "email": "",
-      "url": "https://github.com/wlaurance"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git://github.com/wlaurance/slack-for-linux"
-    },
-  
-  "dependencies": {},
-  "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-rename": "0.0.3",
-    "grunt-contrib-compress": "^0.10.0",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "load-grunt-tasks": "^0.6.0",
-    "time-grunt": "^0.4.0",
-    "concat-files": "~0.1.0"
+  "homepage": "https://github.com/wlaurance/slack-for-linux",
+  "bugs": "https://github.com/wlaurance/slack-for-linux/issues",
+  "author": {
+    "name": "Will Laurance",
+    "email": "",
+    "url": "https://github.com/wlaurance"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/wlaurance/slack-for-linux"
+  },
+  "dependencies": {
+    "grunt": "^0.4.5",
+    "grunt-node-webkit-builder": "^1.0.0"
   },
   "engines": {
     "node": ">=0.8.0"
+  },
+  "os": ["linux"],
+  "scripts": {
+    "postinstall": "./install.sh"
   }
 }
