--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "slack-for-linux",
   "version": "1.1.1",
-  "description": "",
-  "keywords": [],
+  "description": "Slack client for linux",
+  "keywords": [
+    "slack",
+    "linux",
+    "node-webkit"
+  ],
   "homepage": "https://github.com/wlaurance/slack-for-linux",
   "bugs": "https://github.com/wlaurance/slack-for-linux/issues",
   "author": {
