--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "linux"
   ],
   "scripts": {
-    "postinstall": "./install.sh"
+    "postinstall": "./install.sh",
+    "test": "jshint *.js app/"
   },
   "bin": {
     "slack-for-linux": "./run.js"
