Add jshint to dev deps
This is for travis ci so it has a local copy of jshint.

Add 'use strict' to the gruntfile

--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
   ],
   "scripts": {
     "postinstall": "./install.sh",
-    "test": "jshint *.js app/"
+    "test": "./node_modules/.bin/jshint *.js app/"
   },
   "bin": {
     "slack-for-linux": "./run.js"
+  },
+  "devDependencies": {
+    "jshint": "^2.5.11"
   }
 }
