--- a/.editorconfig
+++ b/.editorconfig
@@ -2,12 +2,15 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = 4
+indent_style = tab
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.{html,json}]
+indent_style = space
+indent_size = 2
 
 [*.md]
 trim_trailing_whitespace = false
