--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,7 @@
     "height": 650,
     "min_width": 650,
     "min_height": 650,
-    "toolbar": true
+    "toolbar": false
   },
   "chromium-args": "--child-clean-exit"
 }
