--- a/app/package.json
+++ b/app/package.json
@@ -12,5 +12,9 @@
     "min_height": 650,
     "toolbar": false
   },
-  "chromium-args": "--child-clean-exit"
+  "chromium-args": "--child-clean-exit",
+  "dependencies": {
+    "get-uri": "^0.1.3",
+    "underscore": "^1.7.0"
+  }
 }
