--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "url": "git://github.com/wlaurance/slack-for-linux"
   },
   "dependencies": {
-    "bower": "^1.3.12",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-node-webkit-builder": "^1.0.2"
@@ -31,15 +30,18 @@
     "linux"
   ],
   "scripts": {
-    "postinstall": "./install.sh",
+    "prepublish": "./build.sh",
     "test": "grunt lint"
   },
   "bin": {
     "slack-for-linux": "./run.js"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-jscs": "^1.1.0",
-    "grunt-lintspaces": "^0.6.0"
+    "grunt-lintspaces": "^0.6.0",
+    "grunt-node-webkit-builder": "^1.0.2"
   }
 }
