--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "slack-for-linux": "./run.js"
   },
   "devDependencies": {
+    "github-changes": "^1.0.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0",
