--- a/.jshintrc
+++ b/.jshintrc
@@ -2,11 +2,16 @@
     "node": true,
     "browser": true,
     "bitwise": true,
-    "camelcase": true,
     "curly": true,
     "eqeqeq": true,
     "immed": true,
     "indent": 4,
+    "globals": {
+        "after": true,
+        "before": true,
+        "describe": true,
+        "it": true
+    },
     "latedef": true,
     "newcap": true,
     "noarg": true,
