--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
   },
   "main": "app/views/index.html",
   "dependencies": {
+    "browserify": "^10.2.4",
     "commander": "^2.8.1",
     "favico.js": "^0.3.8",
+    "flux": "^2.0.3",
     "get-uri": "^0.1.3",
+    "key-mirror": "^1.0.0",
     "nw": "0.12.1",
+    "object-assign": "^3.0.0",
+    "react": "^0.13.3",
     "underscore": "^1.7.0"
   },
   "engines": {
@@ -33,20 +38,23 @@
     "linux"
   ],
   "scripts": {
+    "build": "mkdir -p dist/js/ 2> /dev/null; browserify app/js/react.js -o dist/js/react.js",
     "start": "node ./run.js",
-    "test": "grunt lint",
+    "test": "mocha && grunt lint",
     "postinstall": "./postinstall.sh"
   },
   "bin": {
     "plaidchat": "./run.js"
   },
   "devDependencies": {
+    "chai": "^3.0.0",
     "github-changes": "^1.0.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-jscs": "^1.1.0",
-    "grunt-lintspaces": "^0.6.0"
+    "grunt-lintspaces": "^0.6.0",
+    "mocha": "^2.2.5"
   },
   "single-instance": true,
   "window": {
