--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browserify": "^10.2.4",
     "commander": "^2.8.1",
     "favico.js": "^0.3.8",
+    "ffmpeg-static": "~1.0.0",
     "flux": "^2.0.3",
     "get-uri": "^0.1.3",
     "key-mirror": "^1.0.0",
